--- a/index.html
+++ b/index.html
@@ -1,2 +1,29 @@
-<h1>hello world</h1>
-<h2>Hello world</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Responsive Page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <nav class="navbar">
+    <div class="logo">MySite</div>
+    <ul class="nav-links" id="navLinks">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <div class="menu-toggle" id="menuToggle">&#9776;</div>
+  </nav>
+
+  <section class="hero">
+    <h1>Welcome to My Responsive Site</h1>
+    <button id="alertButton">Click Me!</button>
+  </section>
+
+  <script src="script.js"></script>
+</body>
+</html>
