--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Simple Background Color Page</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       background-color: #f0f8ff; /* Light blue background */
